--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       </div>
     </div>
     <!--JavaScript at end of body for optimized loading-->
+    <!-- need JQuery? -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
   </body>
   
