--- a/index.html
+++ b/index.html
@@ -44,27 +44,11 @@
           <li><a href="#" class="btn-floating orange btn-large"><i class="large material-icons">attach_file</i></a></li>
         </ul>
       </div>
+      <!-- FLAT BUTTON -->
+      <a href="#" class="waves-effect waves-teal btn-flat">Button</a>
     </div>
     <!--JavaScript at end of body for optimized loading-->
-    <!-- need JQuery? -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
   </body>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-
 </html>
