add navigation bar

--- a/index.html
+++ b/index.html
@@ -95,6 +95,80 @@
       <img src="http://imgsv.imaging.nikon.com/lineup/lens/zoom/normalzoom/af-s_dx_18-140mmf_35-56g_ed_vr/img/sample/sample1_l.jpg" alt="" class="responsive-img circle" alt="">
     </div><!-- ./container -->
 
+    <!-- NAVIGATION -->
+    <!-- LEFT LOGO -->
+    <nav>
+      <div class="nav-wrapper blue">
+        <a href="#" class="brand-logo">Logo</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <br><br>
+
+    <!-- RIGHT LOGO -->
+    <nav>
+      <div class="nav-wrapper red">
+        <a href="#" class="brand-logo right">Logo</a>
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <br><br>
+
+    <!-- CENTER LOGO -->
+    <nav>
+      <div class="nav-wrapper green">
+        <a href="#" class="brand-logo center">Logo</a>
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <br><br>
+
+    <!-- DROPDOWN -->
+    <ul id="dropdown1" class="dropdown-content">
+      <li><a href="#!">one</a></li>
+      <li><a href="#!">two</a></li>
+      <li class="divider"></li>
+      <li><a href="#!">three</a></li>
+    </ul>
+    <nav>
+      <div class="nav-wrapper green">
+        <a href="#" class="brand-logo center">Logo</a>
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="" class="dropdown-button" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <br><br>
+
+    <!-- ICONS & BUTTONS IN NAV -->
+    <nav>
+      <div class="nav-wrapper black">
+        <a href="#" class="brand-logo right">Logo</a>
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+          <li><a href="#"><i class="material-icons">search</i></a></li>
+          <li><a href="#"><i class="material-icons left">refresh</i>Link with Left Icon</a></li>
+          <li><a class="waves-effect waves-light btn">Button</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <br><br>
+
     <div style="height:500px"></div>
 
     <!--JavaScript at end of body for optimized loading-->
