--- a/index.html
+++ b/index.html
@@ -166,8 +166,23 @@
         </ul>
       </div>
     </nav>
-
     <br><br>
+
+    <!-- SEARCHBAR -->
+    <nav>
+      <div class="nav-wrapper">
+        <form>
+          <div class="input-field">
+            <input id="search" type="search" required>
+            <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+            <i class="material-icons">close</i>
+          </div>
+        </form>
+      </div>
+    </nav>
+    <br><br>
+
+    
 
     <div style="height:500px"></div>
 
