--- a/index.html
+++ b/index.html
@@ -200,6 +200,62 @@
       <li><a href="#">Services</a></li>
     </ul>
 
+    <div class="container">
+      <h1>COLLECTIONS/LIST</h1>
+      <!-- COLLECTION/LIST -->
+      <ul class="collection">
+        <li class="collection-item">Item 1</li>
+        <li class="collection-item">Item 2</li>
+        <li class="collection-item">Item 3</li>
+        <li class="collection-item">Item 4</li>
+      </ul>
+
+      <!-- LINKS COLLECTION -->
+      <div class="collection">
+        <a href="#" class="collection-item">Link 1</a>
+        <a href="#" class="collection-item">Link 2</a>
+        <a href="#" class="collection-item">Link 3</a>
+        <a href="#" class="collection-item">Link 4</a>
+      </div>
+
+      <!-- WITH HEADER -->
+      <ul class="collection with-header">
+        <li class="collection-item"><h4>Header</h4></li>
+        <li class="collection-item">Item 1</li>
+        <li class="collection-item">Item 2</li>
+        <li class="collection-item">Item 3</li>
+      </ul>
+
+      <!-- ICON LIST -->
+      <h1>ICON COLLECTION</h1>
+      <ul class="collection">
+        <li class="collection-item avatar">
+          <i class="material-icons circle">folder</i>
+          <span class="title">Title</span>
+          <p>First Line <br>
+             Second Line
+          </p>
+          <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+        </li>
+        <li class="collection-item avatar">
+          <i class="material-icons circle green">insert_chart</i>
+          <span class="title">Title</span>
+          <p>First Line <br>
+             Second Line
+          </p>
+          <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+        </li>
+        <li class="collection-item avatar">
+          <i class="material-icons circle red">play_arrow</i>
+          <span class="title">Title</span>
+          <p>First Line <br>
+             Second Line
+          </p>
+          <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+        </li>
+      </ul>
+    </div>
+
     <div style="height:500px"></div>
 
     <!--JavaScript at end of body for optimized loading-->
