--- a/index.html
+++ b/index.html
@@ -254,6 +254,18 @@
           <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
         </li>
       </ul>
+
+      <h1>PAGINATION</h1>
+      <ul class="pagination">
+        <li class="disabled"><a href=""><i class="material-icons">chevron_left</i></a></li>
+        <li class="active"><a href="#">1</a></li>
+        <li class="waves-effect"><a href="#">2</a></li>
+        <li class="waves-effect"><a href="#">3</a></li>
+        <li class="waves-effect"><a href="#">4</a></li>
+        <li class="waves-effect"><a href="#">5</a></li>
+        <li class="waves-effect"><a href="#">6</a></li>
+        <li class="waves-effect"><a href=""><i class="material-icons">chevron_right</i></a></li>
+      </ul>
     </div>
 
     <div style="height:500px"></div>
