--- a/index.html
+++ b/index.html
@@ -266,6 +266,68 @@
         <li class="waves-effect"><a href="#">6</a></li>
         <li class="waves-effect"><a href=""><i class="material-icons">chevron_right</i></a></li>
       </ul>
+
+      <h1>BREADCRUMBS</h1>
+      <nav>
+       <div class="nav-wrapper">
+         <div class="col s12">
+           <a href="" class="breadcrumb">First</a>
+            <a href="" class="breadcrumb">Second</a>
+             <a href="" class="breadcrumb">Third</a>
+         </div>
+       </div>
+      </nav>
+
+      <h1>CARDS</h1>
+      <!-- CARDS -->
+      <div class="card blue-grey darken-1">
+       <div class="card-content white-text">
+         <span class="card-title">Card Title</span><a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ratione, aliquid minima autem tempora, dolor impedit quidem tempore dolorem magnam deserunt, illo. Perspiciatis, quia praesentium nihil illo asperiores dolor modi.</p>
+       </div>
+       <div class="card-action">
+         <a href="#">Link 1</a>
+         <a href="#">Link 2</a>
+       </div>
+      </div>
+
+      <!-- IMAGE CARD -->
+      <h1>IMAGE CARD</h1>
+      <div class="card small">
+       <div class="card-image">
+         <img src="http://materializecss.com/images/sample-1.jpg">
+         <span class="card-title">Card Title</span>
+       </div>
+       <div class="card-content">
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, voluptatum soluta aspernatur quod quaerat saepe accusamus ducimus dolore commodi, rem.</p>
+       </div>
+       <div class="card-action">
+         <a href="#">This is a link</a>
+       </div>
+      </div>
+
+      <!-- HORIZONTAL CARDS -->
+      <h2 class="header">Horizontal Card</h2>
+      <div class="card horizontal">
+       <div class="card-image">
+         <img src="http://materializecss.com/images/sample-1.jpg">
+       </div>
+       <div class="card-stacked">
+         <div class="card-content">
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, et.</p>
+         </div>
+         <div class="card-action">
+           <a href="#">This is a link</a>
+         </div>
+       </div>
+      </div>
+
+      <!-- CARD PANEL -->
+      <h1>CARD PANEL</h1>
+      <div class="card-panel teal">
+       <span class="white-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem in cum ducimus quod impedit vitae, qui dolore ratione error repudiandae inventore eum magnam molestiae aliquam. Ut maxime quae eius atque.
+       </span>
+      </div>
     </div>
 
     <div style="height:500px"></div>
