--- a/index.html
+++ b/index.html
@@ -328,6 +328,15 @@
        <span class="white-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem in cum ducimus quod impedit vitae, qui dolore ratione error repudiandae inventore eum magnam molestiae aliquam. Ut maxime quae eius atque.
        </span>
       </div>
+
+      <!-- CHIPS -->
+      <h1>CHIPS</h1>
+      <div class="chip">
+       Tag 1<i class="close material-icons">close</i>
+      </div>
+      <div class="chip">
+       Tag 2<i class="close material-icons">close</i>
+      </div>
     </div>
 
     <div style="height:500px"></div>
