--- a/index.html
+++ b/index.html
@@ -337,6 +337,23 @@
       <div class="chip">
        Tag 2<i class="close material-icons">close</i>
       </div>
+
+      <h1>FORMS</h1>
+      <!-- FORMS -->
+      <form>
+       <div class="input-field">
+         <input type="text" id="name">
+         <label class="active" for="name">Name</label>
+       </div>
+       <div class="input-field">
+         <input type="email" id="email" class="validate">
+         <label class="active" for="email">Email</label>
+       </div>
+       <div class="input-field">
+         <textarea type="email" id="textarea" class="materialize-textarea"></textarea>
+         <label class="active" for="textarea">Textarea</label>
+       </div>
+      </form>
     </div>
 
     <div style="height:500px"></div>
