--- a/index.html
+++ b/index.html
@@ -354,6 +354,16 @@
          <label class="active" for="textarea">Textarea</label>
        </div>
       </form>
+
+      <h1>PRELOADERS</h1>
+      <!-- PRELOADERS -->
+      <div class="progress">
+       <div class="determinate" style="width:40%"></div>
+      </div>
+      <div class="progress">
+       <div class="indeterminate"></div>
+      </div>
+
     </div>
 
     <div style="height:500px"></div>
