--- a/index.html
+++ b/index.html
@@ -364,6 +364,21 @@
        <div class="indeterminate"></div>
       </div>
 
+      <!-- CIRCULAR -->
+      <div class="preloader-wrapper big active">
+       <div class="spinner-layer spinner-blue-only">
+         <div class="circle-clipper left">
+           <div class="circle"></div>
+         </div>
+         <div class="gap-patch">
+           <div class="circle"></div>
+         </div>
+         <div class="circle-clipper right">
+           <div class="circle"></div>
+         </div>
+       </div>
+      </div>
+
     </div>
 
     <div style="height:500px"></div>
