--- a/index.html
+++ b/index.html
@@ -379,6 +379,39 @@
        </div>
       </div>
 
+      <h1>GRID SYSTEM</h1>
+      <!-- GRID SYSTEM -->
+      <div class="row">
+       <div class="col s1"><div class="card-panel grey">1</div></div>
+       <div class="col s1"><div class="card-panel grey">2</div></div>
+       <div class="col s1"><div class="card-panel grey">3</div></div>
+       <div class="col s1"><div class="card-panel grey">4</div></div>
+       <div class="col s1"><div class="card-panel grey">5</div></div>
+       <div class="col s1"><div class="card-panel grey">6</div></div>
+       <div class="col s1"><div class="card-panel grey">7</div></div>
+       <div class="col s1"><div class="card-panel grey">8</div></div>
+       <div class="col s1"><div class="card-panel grey">9</div></div>
+       <div class="col s1"><div class="card-panel grey">10</div></div>
+       <div class="col s1"><div class="card-panel grey">11</div></div>
+       <div class="col s1"><div class="card-panel grey">12</div></div>
+      </div>
+
+      <div class="row">
+       <div class="col s8"><div class="card-panel grey">8</div></div>
+       <div class="col s4"><div class="card-panel grey">4</div></div>
+      </div>
+
+      <div class="row">
+       <div class="col s4"><div class="card-panel grey">4</div></div>
+       <div class="col s4"><div class="card-panel grey">4</div></div>
+       <div class="col s4"><div class="card-panel grey">4</div></div>
+      </div>
+
+      <!-- OFFSETTING -->
+      <div class="row">
+        <div class="col s12"><div class="card-panel grey">This div is 12 cols</div></div>
+        <div class="col s6 offset-s6"><div class="card-panel grey">This div is 6 cols offset by 6</div></div>
+      </div>
     </div>
 
     <div style="height:500px"></div>
