--- a/index.html
+++ b/index.html
@@ -412,6 +412,13 @@
         <div class="col s12"><div class="card-panel grey">This div is 12 cols</div></div>
         <div class="col s6 offset-s6"><div class="card-panel grey">This div is 6 cols offset by 6</div></div>
       </div>
+
+      <!-- PUSH AND PULL -->
+      <div class="row">
+        <div class="col s7 push-s5"><div class="card-panel grey">This div is 7 cols widw</div></div>
+        <div class="col s5 pull-s7"><div class="card-panel grey">This div is 5 cols widw</div></div>
+      </div>
+
     </div>
 
     <div style="height:500px"></div>
