--- a/index2.html
+++ b/index2.html
@@ -51,7 +51,34 @@
         </a>
       </div>
 
-
+      <!-- COLLAPSIBLE -->
+      <h1>COLLAPSIBLE</h1>
+      <ul class="collapsible" data-collapsible="accordion">
+        <li>
+          <div class="collapsible-header">
+            <i class="material-icons">filter_drama</i>First
+          </div>
+          <div class="collapsible-body">
+            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, totam?</span>
+          </div>
+        </li>
+        <li>
+          <div class="collapsible-header active">
+            <i class="material-icons">filter_drama</i>Second
+          </div>
+          <div class="collapsible-body">
+            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, totam?</span>
+          </div>
+        </li>
+        <li>
+          <div class="collapsible-header">
+            <i class="material-icons">filter_drama</i>Third
+          </div>
+          <div class="collapsible-body">
+            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, totam?</span>
+          </div>
+        </li>
+      </ul>
 
       </div><!-- ./container -->
 
