--- a/index2.html
+++ b/index2.html
@@ -80,6 +80,10 @@
         </li>
       </ul>
 
+      <!--TOASTS-->
+      <h1>TOASTS</h1>
+      <a onclick="Materialize.toast('Post Saved', 4000, 'rounded')" class="btn">Toast!</a>
+
       </div><!-- ./container -->
 
       <div style="height:500px"></div>
@@ -92,6 +96,9 @@
           // Init Carousel
           $('.carousel').carousel();
           $('.carousel.carousel-slider').carousel({fullWidth:true});
+
+          // Fire off toast
+          Materialize.toast('Hello World', 3000);
         });
       </script>
     </body>
