--- a/index2.html
+++ b/index2.html
@@ -84,6 +84,13 @@
       <h1>TOASTS</h1>
       <a onclick="Materialize.toast('Post Saved', 4000, 'rounded')" class="btn">Toast!</a>
 
+      <!-- TOOLTIPS -->
+      <h1>TOOLTIPS</h1>
+      <a href="" class="btn tooltipped" data-position="top" data-tooltip="I am tooltip">Hover Me</a>
+      <a href="" class="btn tooltipped" data-position="bottom" data-tooltip="I am tooltip" data-delay="5000">Hover Me</a>
+      <a href="" class="btn tooltipped" data-position="left" data-tooltip="I am tooltip">Hover Me</a>
+      <a href="" class="btn tooltipped" data-position="right" data-tooltip="I am tooltip">Hover Me</a>
+
       </div><!-- ./container -->
 
       <div style="height:500px"></div>
