--- a/index2.html
+++ b/index2.html
@@ -91,6 +91,19 @@
       <a href="" class="btn tooltipped" data-position="left" data-tooltip="I am tooltip">Hover Me</a>
       <a href="" class="btn tooltipped" data-position="right" data-tooltip="I am tooltip">Hover Me</a>
 
+      <!-- DROPDOWN -->
+      <h1>DROPDOWN</h1>
+      <a href="" class="dropdown-button btn" data-activates="dropdown1">Dropdown</a>
+      <!-- Dropdown Structure -->
+      <ul id='dropdown1' class='dropdown-content'>
+        <li><a href="#!">one</a></li>
+        <li><a href="#!">two</a></li>
+        <li class="divider"></li>
+        <li><a href="#!">three</a></li>
+        <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
+        <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
+      </ul>
+
       </div><!-- ./container -->
 
       <div style="height:500px"></div>
