add materialize boxed

--- a/index2.html
+++ b/index2.html
@@ -104,6 +104,11 @@
         <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
       </ul>
 
+      <!-- MATERIAL BOXED-->
+      <h1>MATERIAL BOXED</h1>
+
+      <img src="http://materializecss.com/images/sample-1.jpg" alt="" class="materialboxed" data-caption="Here is an image caption">
+
       </div><!-- ./container -->
 
       <div style="height:500px"></div>
