--- a/index2.html
+++ b/index2.html
@@ -187,6 +187,41 @@
       </ul>
       <a href="" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 
+      <!-- TABS -->
+      <h1>TABS</h1>
+      <div class="row">
+        <div class="col s12">
+          <ul class="tabs">
+            <li class="tab col s3"><a href="#test1">Test 1</a></li>
+            <li class="tab col s3"><a class="active" href="#test2">Test 2</a></li>
+            <li class="tab col s3 disabled"><a href="#test3">Test 3</a></li>
+            <li class="tab col s3"><a href="#test4">Test 4</a></li>
+          </ul>
+        </div>
+        <div id="test1" class="col s12">Test 1</div>
+        <div id="test2" class="col s12">Test 2</div>
+        <div id="test3" class="col s12">Test 3</div>
+        <div id="test4" class="col s12">Test 4</div>
+      </div>
+
+      <!-- TAP TARGET -->
+      <div class="fixed-action-btn" style="bottom:45px;right:24px">
+        <a id="menu" onclick="$('.tap-target').tapTarget('open')" class="waves-effect waves-light btn btn-floating btn-large cyan">
+          <i class="material-icons">menu</i>
+        </a>
+      </div>
+
+      <a onclick="$('.tap-target').tapTarget('open')" class="waves-effect waves-light btn cyan">Open Tap Target</a>
+      <a onclick="$('.tap-target').tapTarget('close')" class="waves-effect waves-light btn cyan">Close Tap Target</a>
+
+      <!-- TAP TARGET CONTENT -->
+      <div class="tap-target cyan" data-activates="menu">
+        <div class="tap-target-content white-text">
+          <h5>Tap Target Content</h5>
+          <p class="white-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate nihil sequi enim. In vitae, facilis cum reprehenderit architecto explicabo aliquam, dicta amet et ex nostrum rem minus aliquid natus, numquam.</p>
+        </div>
+      </div>
+
       </div><!-- ./container -->
 
       <div style="height:500px"></div>
